# nix-opencode

./: .devenv.flake.nix  .pre-commit-config.yaml  .tmuxp.yaml  AGENTS.md  README.md  devenv.nix  flake.nix  pyproject.toml
src/opencode_wrapper/: __init__.py  cli.py  config.py  wrapper.py
